[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
cryptography = "^46.0.7"
python-dateutil = "^2.9.0.post0"
python-json-logger = "^4.1.0"
aio-pika = "^9.6.2"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
aiosmtplib = "^5.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

